[project]
name = "pybindlib"
version = "0.1.0"
description = "Generate Python ctypes bindings from shared libraries"
authors = [
    {name = "Ray Strode", email = "rstrode@redhat.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that interact with real system components",
]

[tool.hatch.build.targets.wheel]
packages = ["pybindlib"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
